# figtok

./: .gitignore  Cargo.toml  Makefile  README.md  builddark.css  buildlight.css  buildpaledark.css  buildpalelight.css  global.css  package.json  pre-install.js  start.js  tarpaulin-report.html  uninstall.js
src/: helpers.rs  lib.rs  loader.rs  main.rs
src/load/: json.rs  mod.rs  parse.rs  utils.rs
src/loader/: mod.rs
src/serialize/: css.rs  json.rs  mod.rs  utils.rs
src/tokens/: helpers.rs  mod.rs
tokens/: $metadata.json  $themes.json  generic.json  global.json  ref.json
tokens-tetst/: $metadata.json  global.json  light.json
tokens-tetst/primitives/: colors.json  space.json  typography.json
tokens/color/: dark.json  light.json
tokens/color/clay/: dark.json  light.json
tokens/color/mint/: dark.json  light.json
tokens/color/plum/: dark.json  light.json
tokens/color/sand/: dark.json  light.json
tokens/color/slate/: dark.json  light.json
tokens/color/stone/: dark.json  light.json
tokens/dark/: clay.json  mint.json  plum.json  sand.json  slate.json  stone.json
tokens/light/: clay.json  mint.json  plum.json  sand.json  slate.json  stone.json
tokens/primitive/: color.json
tokens/syntax/: adapative.json  fixed.json
tokens/theme/: dark.json  light.json
tokens1/: $metadata.json  $themes.json  global.json
tokens1/primitives/: colors.json
