[package]
name = "figma-tokens-parser"
description = "takes Figma Tokens JSON and outputs CSS"
license = "MIT"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
colors-transform = "0.2.4"
clap = { version = "4.0.19", features = ["derive"] }
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
